Update TaskFactory.java
getAndIncrementId() method use new Integer() ,Integer.valueOf() is a better method